force-app/main/default/objects/Switchee_Insight__c/Switchee_Insight__c.object-meta.xml
<CustomObject>
    <label>Switchee Insight</label>
    <pluralLabel>Switchee Insights</pluralLabel>
    <description>Daily aggregated analytics for a property — risk scores, temperature, humidity, heating hours</description>
    <nameField>
        <label>Insight Number</label>
        <type>AutoNumber</type>
        <displayFormat>SI-{0000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>