force-app/main/default/objects/Switchee_Insight__c/fields/Avg_Weather_Temp__c.field-meta.xml
<CustomField>
    <fullName>Avg_Weather_Temp__c</fullName>
    <label>Avg Weather Temp</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>