force-app/main/default/objects/Switchee_Insight__c/fields/Context_Date__c.field-meta.xml
<CustomField>
    <fullName>Context_Date__c</fullName>
    <label>Context Date</label>
    <type>Date</type>
    <required>true</required>
</CustomField>