force-app/main/default/objects/Switchee_Insight__c/fields/Fuel_Poverty_Risk__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Poverty_Risk__c</fullName>
    <label>Fuel Poverty Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>