force-app/main/default/objects/Switchee_Insight__c/fields/Heat_Loss_Band__c.field-meta.xml
<CustomField>
    <fullName>Heat_Loss_Band__c</fullName>
    <label>Heat Loss Band</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>