force-app/main/default/objects/Switchee_Insight__c/fields/Heat_Loss_Rate_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Heat_Loss_Rate_Hrs__c</fullName>
    <label>Heat Loss Rate Hours</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>