force-app/main/default/objects/Switchee_Insight__c/fields/Heating_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Heating_Hrs__c</fullName>
    <label>Heating Hours</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>