force-app/main/default/objects/Switchee_Insight__c/fields/Heating_Zone__c.field-meta.xml
<CustomField>
    <fullName>Heating_Zone__c</fullName>
    <label>Heating Zone</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>