force-app/main/default/objects/Switchee_Insight__c/fields/Hot_Water_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Hot_Water_Hrs__c</fullName>
    <label>Hot Water Hours</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>