force-app/main/default/objects/Switchee_Insight__c/fields/Max_Humidity__c.field-meta.xml
<CustomField>
    <fullName>Max_Humidity__c</fullName>
    <label>Max Humidity</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>