force-app/main/default/objects/Switchee_Insight__c/fields/Max_Weather_Temp__c.field-meta.xml
<CustomField>
    <fullName>Max_Weather_Temp__c</fullName>
    <label>Max Weather Temp</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>