force-app/main/default/objects/Switchee_Insight__c/fields/Min_Humidity__c.field-meta.xml
<CustomField>
    <fullName>Min_Humidity__c</fullName>
    <label>Min Humidity</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>