force-app/main/default/objects/Switchee_Insight__c/fields/Min_Indoor_Temp__c.field-meta.xml
<CustomField>
    <fullName>Min_Indoor_Temp__c</fullName>
    <label>Min Indoor Temp</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>