force-app/main/default/objects/Switchee_Insight__c/fields/Mould_Risk_Pct__c.field-meta.xml
<CustomField>
    <fullName>Mould_Risk_Pct__c</fullName>
    <label>Mould Risk %</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>