force-app/main/default/objects/Switchee_Insight__c/fields/Mould_Risk_Version__c.field-meta.xml
<CustomField>
    <fullName>Mould_Risk_Version__c</fullName>
    <label>Mould Risk Version</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>