force-app/main/default/objects/Switchee_Insight__c/fields/Overheating_Peak__c.field-meta.xml
<CustomField>
    <fullName>Overheating_Peak__c</fullName>
    <label>Overheating Peak</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>