force-app/main/default/objects/Switchee_Insight__c/fields/Property_Location__c.field-meta.xml
<CustomField>
    <fullName>Property_Location__c</fullName>
    <label>Property Location</label>
    <type>Lookup</type>
    <referenceTo>Location</referenceTo>
    <relationshipName>Switchee_Insights</relationshipName>
    <relationshipLabel>Switchee Insights</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>