force-app/main/default/objects/Switchee_Insight__c/fields/Time_To_Heat_Band__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Heat_Band__c</fullName>
    <label>Time To Heat Band</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>