force-app/main/default/objects/Switchee_Insight__c/fields/Time_To_Heat_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Heat_Hrs__c</fullName>
    <label>Time To Heat Hours</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>